--- a/_sass/nmtc/_page.scss
+++ b/_sass/nmtc/_page.scss
@@ -18,3 +18,8 @@
     // text-decoration: none;
   }
 }
+
+.table-container {
+  overflow-x: auto; 
+  max-width: 100%;
+}
